[package]
authors = ["w3irdrobot <rob@w3ird.tech>"]
description = "utilities for building web servers for nostr"
edition = "2021"
homepage = "https://github.com/w3irdrobot/nostr-web"
license = "CC0-1.0"
name = "nostr-web"
repository = "https://github.com/w3irdrobot/nostr-web"
version = "0.1.0"

[dependencies]
actix-web = { version = "4", optional = true }
async-trait = { version = "0.1", optional = true }
axum = { version = "0.6", optional = true }
axum-core = { version = "0.3", optional = true }
base64 = "0.21"
futures = { version = "0.3", optional = true }
nostr = { git = "https://github.com/rust-nostr/nostr.git", rev = "f9be3bbdbd5370213c8fe5dab0239e77204ce01b" }
serde_json = "1.0"
time = "0.3"
url = "2.4"

[features]
actix = ["actix-web", "futures"]
axum = ["dep:axum", "axum-core", "async-trait"]
default = ["axum"]
